# bics-chatbot

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pull_request_template.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: broken_missing_colon.py
scripts/: prepare_dataset.py
src/codebug_bot/: __init__.py  analyzer.py  chatbot.py  cli.py  fixer.py  llm.py  server.py
tests/: test_analyzer.py
