[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codebug-bot"
version = "0.1.0"
description = "Chatbot para detectar defeitos sintáticos em Python e sugerir correções."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Community"}]
dependencies = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
